# OMPLMotionPlanning

./: .gitignore  Dockerfile  README.md  box.urdf  debug.py  graph.py  main.cpp  path  robot.py  robot.urdf  rrt_star.py  rrt_utils.py
cpp/: CMakeLists.txt  config.yaml  plan_config.yaml  preplan_config.yaml  test.cpp
cpp/include/: goal_checker.hpp  planner.hpp  state_checker.hpp
cpp/src/: goal_checker.cpp  main.cpp  plan.cpp  preplan.cpp  state_checker.cpp
data/: interview.csv  path.pkl  plan.csv
python/: debug.py  robot.py  rrt_star.py  visualize.py
python/robots/: robot.urdf  target.urdf
rrt_star_py/: env.py  visualize.py
sol_cpp/: CMakeLists.txt  test.cpp
sol_cpp/include/: planner.hpp  state_checker.hpp  state_checker2.hpp
sol_cpp/src/: main.cpp  state_checker.cpp  state_checker2.cpp
